--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -4,6 +4,12 @@
   <%= f.label :title %>
   <%= f.text_field :title %>
   <br />
+  <%= f.label :artist %>
+  <%= f.text_field :artist %>
+  <br />
+  <%= f.label :genre %>
+  <%= f.text_field :genre %>
+  <br />
 
   <%= f.submit %>
 <% end %>
